# hyperpad

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  install.sh  qText.pro  qtext.pro
assets/application/: qtext.desktop
assets/docs/: CONTRIBUTING.md
data/: hyperpad.desktop  resources.qrc
data/app/: hyperpad.desktop
hyper_old/: CMakeLists.txt  CONTRIBUTING.md
hyper_old/data/: resources.qrc
hyper_old/data/app/: hyperpad.desktop
hyper_old/src/: CMakeLists.txt  mainwindow.hpp  version.hpp.in
src/: CMakeLists.txt  file.cpp  file.hpp  io.cpp  io.hpp  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.hh  mainwindow.hpp  mainwindow.ui  myapplication.cpp  myapplication.hpp  resources.qrc  statusbar.cpp  statusbar.hpp  texteditor.cpp  texteditor.hpp  ui.cpp  ui.hpp  version.hpp.in
src/ui/: mainwindow.ui
